--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
   "dependencies": {
     "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
+    "@supabase/supabase-js": "^2.53.0",
+    "@types/uuid": "^10.0.0",
     "class-variance-authority": "^0.7.1",
     "date-fns": "^4.1.0",
     "next": "15.4.5",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "uuid": "^11.1.0",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
